--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,11 @@
 	},
 	"autoload": {
 		"classmap": [
-			"app/commands",
-			"app/controllers",
-			"app/models",
+            "app/Cashout",
+            "app/commands",
+            "app/controllers",
 			"app/database/migrations",
-			"app/database/seeds",
-			"app/tests/TestCase.php"
+			"app/database/seeds"
 		]
 	},
 	"scripts": {
