--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
 	"require": {
 		"laravel/framework": "4.2.*",
         "kodeinfo/user-management": "dev-master",
-        "artdarek/oauth-4-laravel": "dev-master"
+        "artdarek/oauth-4-laravel": "dev-master",
+        "pusher/pusher-php-server": "dev-master"
 	},
 	"autoload": {
 		"classmap": [
